# jdksavdecc-proxy

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  biicode.conf  format  project.mk
docs-dev/: Doxyfile
include/: jdksavdecc-proxy.h  jdksavdecc-proxy_apc.h  jdksavdecc-proxy_app.h  jdksavdecc-proxy_aps.h  jdksavdecc-proxy_client.h  jdksavdecc-proxy_net.h  jdksavdecc-proxy_server.h  jdksavdecc-proxy_world.h
include/JDKSAvdeccProxy/: APCClientHandler.hpp  AppMessage.hpp  Aps.hpp  ApsClient.hpp  HttpServerBlob.hpp  HttpServerCgi.hpp  HttpServerContent.hpp  HttpServerFiles.hpp  JDKSAvdeccProxy.hpp  NetworkService.hpp  NetworkServiceBase.hpp  RawClientHandler.hpp  RawNetworkHandler.hpp  ServiceController.hpp  UvRawNetworkPort.hpp  World.hpp
src/: APCClientHandler.cpp  AppMessage.cpp  ApsClient.cpp  HttpServerBlob.cpp  HttpServerCgi.cpp  HttpServerContent.cpp  HttpServerFiles.cpp  JDKSAvdeccProxy.cpp  NetworkService.cpp  RawNetworkHandler.cpp  ServiceController.cpp  UvRawNetworkPort.cpp  jdksavdecc-proxy.c  jdksavdecc-proxy_apc.c  jdksavdecc-proxy_app.c  jdksavdecc-proxy_aps.c  jdksavdecc-proxy_client.c  jdksavdecc-proxy_net.c  jdksavdecc-proxy_server.c  jdksavdecc-proxy_world.c
src/HttpServerContent/: all_content.h  build.sh  index.html  theme.css
tools/: jdksavdecc-proxyd.c
tools/Linux/: JDKSAvdeccProxyServer.cpp
tools/MacOSX/: JDKSAvdeccProxyServer.cpp
tools/Win32/: JDKSAvdeccProxyServer.cpp
tools/posix/: jdksavdecc-proxyd.c  jdksavdecc-proxyd.h
